CSQC teleport predictions. Coop fix.

--- a/cfgs/reset.conf
+++ b/cfgs/reset.conf
@@ -1,23 +1,18 @@
 // Executes when all players have left the server
 
-sv_antilag          "1" // Reset lag compensation
-sv_minping          "0" // Reset latency enforcement
-sv_spectalk         "1" // Since we have /cmd mute
+sv_antilag         "1"	  // Reset lag compensation
+sv_minping         "0"    // Reset latency enforcement
+sv_spectalk        "1"    // Since we have /cmd mute
 
-coop                "" // Turn off coop so it is voteable
+coop               ""     // So coop games can start again
 
-mvd_streamport      "$port" // QTV stream port is the same as UDP
+mvd_streamport $port
 
-set g_game_record   "1" // Demo recording
-set g_game_botskill "0" // Reset botskill
+set g_game_record    "1"
+set g_game_botskill  "0"    // Reset botskill
 
-set g_spike_absorb  "0.0"  // Penetrate armor for nailguns
-set g_spike_push    "2.0"  // Increased
-set g_spike2_absorb "0.0"  // Penetrate armor for super nailguns
-set g_spike2_push   "2.0"  // Increased
-set g_rocket_damage "120"  // Increased
-set g_rocket_push   "1.01" // Attempt to fix RJ
-set g_bullet_damage "3.5"  // Increased
+set g_spike_push 2.0
+set g_spike2_push 2.0
 
 // Set these to non-zero for new features
 
