Change sv_gamedir to qp

--- a/server.cfg
+++ b/server.cfg
@@ -1,7 +1,7 @@
 // Default Chilling Spree server config
 
-allow_download_packages "0"          // Fodquake bug workaround
-sv_gamedir              "qw"         // The client sees this as gamedir
+allow_download_packages "1"
+sv_gamedir              "qp"         // The client sees this as gamedir
 sv_loadentfiles         "1"          // Map item configurations (maps/*.ent)
 sv_mintic               "0"          // For bot frames to update correctly
 sv_maxtic               "0.1"        // ???
