Clean up configs

--- a/qp.pk3dir/cfgs/rules/hide.conf
+++ b/qp.pk3dir/cfgs/rules/hide.conf
@@ -9,4 +9,4 @@ set g_powerups_enabled "0"
 timelimit 2
 fraglimit 1000
 deathmatch 7 // instagib when firing at hidden enemies to verify you found them
-coop ""
+teamplay 1
