--- a/qp.pk3dir/cfgs/rules/rover.conf
+++ b/qp.pk3dir/cfgs/rules/rover.conf
@@ -1,3 +1,5 @@
+set g_maxteamsize      "8"
+set g_minteamsize      "1"
 set g_maxplayers       "8"
 set g_minplayers       "4"
 set g_game_rounds      "10"
@@ -9,4 +11,4 @@ set g_powerups_enabled "0"
 timelimit 1
 fraglimit 1000
 deathmatch 3
-coop ""
+teamplay 1
