--- a/qp.pk3dir/cfgs/rules/default.conf
+++ b/qp.pk3dir/cfgs/rules/default.conf
@@ -1,3 +1,19 @@
+timelimit 10
+fraglimit 1000
+deathmatch 3
+teamplay 1
+coop 0
+
+set g_maxteamsize      "8"
+set g_minteamsize      "1"
+set g_maxplayers       "24"
+set g_minplayers       "1"
+set g_game_rounds      "0"
+set g_game_teamdamage  "1"
+set g_hook_enabled     "0"
+set g_overtime         "3"
+set g_powerups_enabled "1"
+
 set g_noitems "0"
 set g_noweapon "gl"
 
