fteqcc.ini: spawn debug server without annoncing on internet

--- a/src/server/fteqcc.ini
+++ b/src/server/fteqcc.ini
@@ -252,7 +252,7 @@ log           off                       # Write out a compile log
 enginebinary  "fteqwsv64.exe"           # Location of the engine binary to run. Change this to something
                                         # else to run a different engine, but not all support debugging.
 basedir       "X:/home/ivan/quake"      # The base directory of the game that contains your sub directory
-engineargs    "-nohome -game qp -port 27500 +set port 27500 -window" 
+engineargs    "-nohome -game qp -port 27500 +set port 27500 -window  +sv_public 0" 
                                         # The engine commandline to use when debugging. You'll likely want
                                         # to ensure this contains -window as well as the appropriate -game
                                         # argument.
