Add QP game mode

--- a/qp.pk3dir/cfgs/ports/port27500.cfg
+++ b/qp.pk3dir/cfgs/ports/port27500.cfg
@@ -8,7 +8,7 @@ set g_info_city     ""
 
 // Optional forced game mode for this port
 set g_game_botskill "0"
-set g_game_mode "coop"
+set g_game_mode "qp"
 set g_game_lockrules "0"
 
-alias startmap_dm "map dm6"
+alias startmap_dm "map bloodfest"
