--- a/qp.pk3dir/server.cfg
+++ b/qp.pk3dir/server.cfg
@@ -18,7 +18,7 @@ sv_maxdrate             "1048576"
 set g_allowbots         "1"          // Frikbot support
 set g_demo_lowername    "1"          // Demo name upper case letters (nickname/team)
 
-set g_allowedmodes      "ffa tdm 2on2 darena coop duel king lms ft hh dom rover"
+set g_allowedmodes      "qp ffa tdm 2on2 darena coop duel king lms ft hh dom rover"
 
 // Server info (is not meant to be edited here but rather in ports/portX.cfg)
 set g_info_hostname     "Admin is a Lazy Ass"
