--- a/qp.pk3dir/cfgs/rules/qp.conf
+++ b/qp.pk3dir/cfgs/rules/qp.conf
@@ -5,6 +5,7 @@ set g_game_teamdamage  "0"
 set g_hook_enabled     "0"
 set g_overtime         "3"
 set g_powerups_enabled "1"
+set g_noweapon         ""
 
 timelimit 600
 fraglimit 1000
