--- a/qp.pk3dir/cfgs/rules/default.conf
+++ b/qp.pk3dir/cfgs/rules/default.conf
@@ -13,6 +13,7 @@ set g_game_teamdamage  "1"
 set g_hook_enabled     "0"
 set g_overtime         "3"
 set g_powerups_enabled "1"
+set g_prewar_countdown "10"
 
 set g_noitems "0"
 set g_noweapon "gl"
