add g_quad_factor cvar

--- a/qp.pk3dir/cfgs/rules/default.conf
+++ b/qp.pk3dir/cfgs/rules/default.conf
@@ -14,6 +14,7 @@ set g_hook_enabled     "0"
 set g_overtime         "3"
 set g_powerups_enabled "1"
 set g_prewar_countdown "10"
+set g_quad_factor      "4"
 
 set g_noitems "0"
 set g_noweapon "gl"
